--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,15 +37,10 @@ dependencies:
   google_fonts: ^5.1.0
   photo_view: ^0.14.0
   rive: ^0.12.4
+  timeline_tile: ^2.0.0
   url_launcher: ^6.1.12
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
