--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,10 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   get: ^4.6.5
   google_fonts: ^5.1.0
+  mailer: ^6.0.1
   photo_view: ^0.14.0
   rive: ^0.12.4
+  smtp_test: ^0.0.1
   timeline_tile: ^2.0.0
   url_launcher: ^6.1.12
 
